reworked part of the intro and of the conclusions/discussion

--- a/vignettes/GWAScatPaper.Rmd
+++ b/vignettes/GWAScatPaper.Rmd
@@ -29,7 +29,9 @@ library("DT")
 
 Larger and more complex biomedical data sets are becoming increasingly available and they provide substantial opportunities for integration across disparate data source to enable the discovery of medically relevant relationships. Tools for representing and organizing biomedical entities and concepts are key components of any system that process disease, medical or epidemiological data. Realizing the potential for discovery is hampered by many challenges including the complexity of the data and the inherent challenge of working with phenotypes and experimental factors described primarily in natural language. To work with these textual descriptions there are a plethora of ontologies and vocabularies that have been proposed and which are in use such as Unified Medical Language System (UMLS) @UMLS2004 , Medical Subject Headings (MeSH), Human Phenotype Ontology (HPO), @HPO2024, and the Experimental Factor Ontology (EFO), @maloneModelingSampleVariables2010. And a similar wide range of objectives such as finding, and matching, relevant phenotypes in large data resources such as NHANES or Biobanks.
 
-We explore some of these challenges in the context of the GWAS catalog, (@sollisNHGRIEBIGWASCatalog2023) which reports on a set of published curated GWAS association studies where the phenotypic traits reported in published articles are mapped to terms in the EFO. GWAS studies report on assocations between single nucleotide polymorphisms (SNPs), which are variants in the human genome, and specific traits. To facilitate searching for traits we use a search strategy that combines the use of a dictionary (corpus based) search combined with an ontology based search.  We create a dictionary search capability that is built on the textual descriptions from both the GWAS catalog and EFO which we combine with a set of tools designed to make use of the relationships and concepts in the ontology.  We demonstrate how these tools, when used together, enable searching the GWAS catalog. The approach has some similarity to that of @phenotagger where they describe a method that combines both dictionary and machine learning-based methods to identify (HPO) concepts in unstructured biomedical text.
+We explore some of these challenges in the context of the GWAS catalog, (@sollisNHGRIEBIGWASCatalog2023) which reports on a set of published curated GWAS association studies where the phenotypic traits reported in published articles are mapped to terms in the EFO. A GWAS reports on assocations between single nucleotide polymorphisms (SNPs), which are variants in the human genome, and specific traits or phenotypes.  The GWAS catalog provides an integrated database of a large set of published GWAS studies curated from the scientific literature and collated, together with a large amount of metadata. Users can freely download and search the data for different purposes. While the data are freely available access to them through easy to use interfaces designed for non-experts appears to be mainly through search facilities on the GWAS catalog website. Our interest is in integrating this resouce with search facilities in the R programming language in order to provide programmatic access to the data and to enable the sorts of complex searches that would be of interest in epidemiological and other fields.
+
+To facilitate searching for traits we use a search strategy that combines the use of a dictionary (corpus based) search combined with an ontology based search.  We create a dictionary search capability that is built on the textual descriptions from both the GWAS catalog and EFO which we combine with a set of tools designed to make use of the relationships and concepts in the ontology.  We demonstrate how these tools, when used together, enable searching the GWAS catalog. The approach has some similarity to that of @phenotagger where they describe a method that combines both dictionary and machine learning-based methods to identify (HPO) concepts in unstructured biomedical text.
 
 In particular we examine the use of corpus search tools, as exemplified in the `corpustools` package
 @atteveldtCorpustoolsManagingQuerying2023, to help search the set of traits that are
@@ -495,7 +497,7 @@ simple_ggmanh(vars, y.label="-log10 p", plot.title = "Diseases of the Lung",
 While the GWAS catalog has provided mappings to EFO there remain some substantial challenges
 for those attempting to use it to find and organize their searches.  As we see in Table \@ref{tab:tab1c} a large number of GWAS studies are mapped to EFO terms where the EFO label is not particularly descriptive so that for these studies EFO labeling has contributed very little. Now, for those studies it is still possible that the GWAS catalog traits will contain more specific details, however, accessing that information will be reliant on tools for searching plain text. 
 
-As we describe for the disease location data, while it is useful the predicates and search strategies that will need to be employed to access it for these sorts of analysis and complex and will likely involve a substantial amount of expertise in the specific ontologies being used, the nature of ontological reasoning and the role in which they will be used. There are few who can carry out all three of those well.
+The disease location data are useful, but access is incomplete, since the predicates and search strategies that will need to be employed to access it for these sorts of analysis and complex and requires expertise in the semantics of ontological concept representation and familiarity with the specific ontologies being used. These are not usually challenging for non-experts to employ.
 
 ```{r efoCKD, echo=FALSE}
 q1 = "chronic AND kidney AND disease"
@@ -523,8 +525,8 @@ knitr::kable(hitsasDT[1:10,], escape=FALSE, row.names=FALSE, caption="CKD EFO Hi
 ##DT::datatable(hitsasDT[1:100,], escape=FALSE, rownames=FALSE, caption="CKD EFO Hits (first 100)")
 ```
 
-Previously we discussed the term EFO:0003086 has text description of "chronic kidney diseases" and pointed out that there were `r length(ckdMatches[[1]])` GWAS catalog studies that were mapped **directly**  and `r efo_df["EFO:0003086", "Inherited"]`inherited studies.
-But these are not all the GWAS catalog studies that have the string *chronic kidney disease* in their trait description. When we search the corpus based on the GWAS catalog we find `r nrow(hitsasDT)`
+We also found in the examples above that the study of the traits associated with a specific disease requires a fairly comprehensive search across all components of an ontology. For example,
+previously we discussed the term EFO:0003086 that has the text description: "chronic kidney diseases". We found `r length(ckdMatches[[1]])` GWAS catalog studies that were mapped **directly**  and `r efo_df["EFO:0003086", "Inherited"]`inherited studies for that EFO term. But these are not all the GWAS catalog studies that have the string *chronic kidney disease* in their trait description. When we search the corpus based on the GWAS catalog we find `r nrow(hitsasDT)`
 different studies that have a hit. 
 
 
@@ -534,7 +536,7 @@ dtandmsmt = intersect(msmtdesc, row.names(hitsasDT))
 #length(dtandmsmt)
 ```
 
-A little more exploring suggests that many of the terms are actually mapped to the descendants of the *measurement*, EFO:0001444, node. Specifically we find that there are `r length(dtandmsmt)` EFO terms that were identified by our search which are annotated as measurements, a number far larger than those that align to disease.  
+A little more exploring suggests that many of the terms are actually mapped to the descendants of the *measurement*, EFO:0001444, node. Specifically we find that there are `r length(dtandmsmt)` EFO terms that were identified by our search which are annotated as measurements, a number far larger than those that align to disease. Thus, relying on mappings to the disease hieriarchy alone will miss many traits relevant to chronic kidney disease.
 
 ```{r gwcmetadtable, echo=FALSE}
 ##gwc_df[gg[1:10], "DISEASE.TRAIT"]
@@ -550,21 +552,18 @@ the papers. The paper associated with PMID 35870639 which reports more than
 6,700 studies is titled: Identification of 969 protein quantitative trait loci in an African American population with kidney disease attributed to hypertension @surapaneniIdentification969Protein2022.
 
 
-Another potential issue is that the EFO provided synonyms might be inaccurate. 
-For `r efo_df["EFO:0000685", "Object"]` the reported synonyms include *proliferative arthritis* and
-*Rheumatic gout*. Proliferative arthritis refers to a condition characterized by the excessive growth of synovial tissue in the joints, leading to inflammation and joint damage while rheumatoid arthritis is an autoimmune disease where the immune system mistakenly attacks the joints, causing inflammation, pain, and joint damage. And *Rheumatic gout* is a somewhat archaic term for gout. Including these as synonyms will result in linking traits that should not be linked and be misleading.
+Another potential issue that will affect the completeness and accuracy of our results is that the EFO provided synonyms might be incomplete or inaccurate. For `r efo_df["EFO:0000685", "Object"]` the reported synonyms include *proliferative arthritis* and *Rheumatic gout*. Proliferative arthritis refers to a condition characterized by the excessive growth of synovial tissue in the joints, leading to inflammation and joint damage while rheumatoid arthritis is an autoimmune disease where the immune system mistakenly attacks the joints, causing inflammation, pain, and joint damage. And *Rheumatic gout* is a somewhat archaic term for gout. Including these as synonyms will result in linking traits that should not be linked and be misleading.
 
 ## Results and Discussion
 
-The results of our exploration are encouraging but also exhibit the challenges that remain. The mapping of phenotypes to an ontology is extremely helpful in providing a more specific vocabulary that can be used to harmonize across studies.  The terms or nodes in the ontology provide a means of identifying synonyms can then be incorporated into searches.  The ontologies themselves are often undergoing active research and development. That typically means they will be updated and in some cases there are ways for users to provide feedback about issues and to give suggestions.  As we have noted they can include additional information, such as disease location, that can be used in any analyses.
+The results of our exploration are encouraging but also exhibit the challenges that remain. The mapping of phenotypes to an ontology is extremely helpful in providing a more specific vocabulary that can be used to harmonize across studies. The terms or nodes in the ontology provide a means of identifying synonyms can then be incorporated into searches.  The ontologies themselves are often undergoing active research and development. That typically means they will be updated and in some cases there are ways for users to provide feedback about issues and to give suggestions.  As we have noted they can include additional information, such as disease location, that can be used in any analyses.
 
 Although there are certain advantages in applying ontology labels to human phenotypes, the effectiveness of correlating them directly with specific phenotypes is debatable. Challenges arise when trying to accommodate concepts like the age of initial disease diagnosis, or the quantification of a protein level shift in a disease compared to a healthy state. There is a tension between accurately depicting the entity, such as age in the first instance and protein measurement in the second, and precisely pinpointing the root disease. Perhaps an approach where the phenotypes of interest are tagged, or labled as pertaining to certain concepts, measurements or diseases would facilitate broader and more appropriate usage.
 
 There are no clear mechanisms to describe the curation processes used. And of course these may change over time, or be different for different curators adding to the complexity of relying on this strategy for aligning phenotypes with ontological representations of knowledge.  We have shown that in the case of the GWAS catalog and curation to the EFO curators chose to map phenotypes to entries in the *measurement* portion of the EFO ontology rather than the disease hierarchy. This is perfectly valid but as our use case relies on identifying diseases this decision leaves us relying on syntax and string matching.
+We anticipate that further refinements, such as making use of other natural language processing tools such as name-entity-recognition (NER), will be useful in further identifying phenotypes that reference specific diseases, genes, drugs.
 
-We anticipate that further refinements such as making use of other natural language processing tools such as name-entity-recognition (NER) may be useful in further identifying phenotypes that reference specific diseases, genes, drugs.
-  
-Our ability to integrate and synthesize data across studies remains hampered by other issues as well.  In most situations we would like to be able to address whether or not studies were based on reasonably similar cohorts of individuals, and in some cases whether or not the inclusion and exclusion criteria were similar.  This of course remains a challenge across much of medical and epidemiological data reporting.
+We believe that it is clear that use of ontologies and similar tools for organizing and analyzing natural language (e.g. artificial intelligence tools for natural language processing, and name entity recognition tools) will play an important role in helping solve some of the existing problems. We also believe that the challenges are complex and require cross-disciplinary efforts with somewhat well stated analytic objectives. Our ability to integrate and synthesize data across studies remains hampered by other issues as well.  In most situations we would like to be able to address whether or not studies were based on reasonably similar cohorts of individuals, and in some cases whether or not the inclusion and exclusion criteria were similar.  These remain challenges across much of medical and epidemiological data reporting.
   
   
 ## Citations
